[project]
name = "cyb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "rich>=14.3.3",
    "streamlit>=1.56.0",
]
